@@ -1,24 +1,23 @@
 package ru.javavlsu.kb.esap.service;
 
-import jakarta.persistence.EntityManager;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.javavlsu.kb.esap.dto.AppointmentsCountByDayDTO;
 import ru.javavlsu.kb.esap.dto.AppointmentDTO;
 import ru.javavlsu.kb.esap.dto.ScheduleResponseDTO.AppointmentResponseDTO;
 import ru.javavlsu.kb.esap.mapper.AppointmentMapper;
 import ru.javavlsu.kb.esap.model.*;
 import ru.javavlsu.kb.esap.repository.AppointmentRepository;
-import ru.javavlsu.kb.esap.repository.DoctorRepository;
 import ru.javavlsu.kb.esap.repository.PatientRepository;
 import ru.javavlsu.kb.esap.repository.ScheduleRepository;
 import ru.javavlsu.kb.esap.exception.NotCreateException;
 import ru.javavlsu.kb.esap.exception.NotFoundException;
+import ru.javavlsu.kb.esap.util.DoctorUtils;
 
-import java.util.Comparator;
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -27,15 +26,15 @@ public class AppointmentService {
     private final AppointmentRepository appointmentRepository;
     private final ScheduleRepository scheduleRepository;
     private final PatientRepository patientRepository;
-    private final EntityManager em;
     private final AppointmentMapper appointmentMapper;
+    private final DoctorUtils doctorUtils;
 
-    public AppointmentService(AppointmentRepository appointmentRepository, ScheduleRepository scheduleRepository, PatientRepository patientRepository, EntityManager em, AppointmentMapper appointmentMapper) {
+    public AppointmentService(AppointmentRepository appointmentRepository, ScheduleRepository scheduleRepository, PatientRepository patientRepository, AppointmentMapper appointmentMapper, DoctorUtils doctorUtils) {
         this.appointmentRepository = appointmentRepository;
         this.scheduleRepository = scheduleRepository;
         this.patientRepository = patientRepository;
-        this.em = em;
         this.appointmentMapper = appointmentMapper;
+        this.doctorUtils = doctorUtils;
     }
 
     @Transactional
@@ -62,12 +61,15 @@ public class AppointmentService {
     @Transactional(readOnly = true)
     public List<AppointmentResponseDTO> getLatestAppointments(Integer count, Doctor doctor) {
         Pageable pageable = PageRequest.of(0, count);
-        doctor = em.merge(doctor);
-        List<Appointment> appointments = doctor.getSchedules().stream()
-                .flatMap(schedule -> appointmentRepository.findTopNByScheduleOrderByIdDesc(schedule, pageable).stream())
-                .sorted(Comparator.comparing(Appointment::getDate).reversed())
-                .limit(count)
-                .collect(Collectors.toList());
+        List<Appointment> appointments = appointmentRepository.findLatestAppointments(doctor, LocalDate.now(), pageable).stream().toList();
         return appointmentMapper.toAppointmentResponseDTOList(appointments);
+    }
+
+    @Transactional(readOnly = true)
+    public List<AppointmentsCountByDayDTO> getAppointmentsCountByDay() {
+        Doctor doctor = doctorUtils.getDoctorDetails().getDoctor();
+        List<AppointmentsCountByDayDTO> appointmentsCountByDayDTOList = appointmentRepository.countAppointmentsByDay(doctor.getClinic());
+
+        return appointmentsCountByDayDTOList;
     }
 }
